--- a/cal.htm
+++ b/cal.htm
@@ -12,7 +12,7 @@
     <div class="container">
         
         <div class="calculator">
-            <form>
+            <fom      >
         <div class="display">
             <input type="text"  name="display" >
  
